--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         @font-face {
             font-family: 'MiSans';
             font-weight: normal;
-            src: url(./MiSans-Regular.ttf);
+            src: url(https://tgx-1257769563.cos.ap-shanghai.myqcloud.com/assets/MiSans-Regular.ttf);
         }
 
         @font-face {
             font-family: 'MiSans';
             font-weight: bold;
-            src: url(./MiSans-Demibold.ttf);
+            src: url(https://tgx-1257769563.cos.ap-shanghai.myqcloud.com/assets/MiSans-Demibold.ttf);
         }
 
         body {
@@ -44,10 +44,13 @@
 <body>
     <div class="mdui-container">
         <br />
-        <div id="photo-area" class="mdui-color-grey-200 mdui-img-rounded mdui-valign"
-            style="height: 256px; background-size: contain; background-repeat: no-repeat; background-position: center;">
+        <div id="photo-area" class="mdui-color-grey-200 mdui-ripple mdui-img-rounded mdui-valign"
+            style="height: 256px; background-size: contain; background-repeat: no-repeat; background-position: center;" onclick="chooseFile()">
             <div class="mdui-center" style="text-align: center;">
-                <h1 id="photo-tip">Drag you photo to here</h1>
+                <div id="photo-tip">
+                    <h1>Drag you photo to here</h1>
+                    <p>Or click here to choose a file</p>
+                </div>
                 <p id="photo-info" class="mdui-hidden">Unknown</p>
             </div>
         </div>
@@ -127,6 +130,18 @@
             const m = tp.toFixed(0);//保留两位小数
             const dfm = d + "°" + f + "'" + m + "\"";
             return dfm;
+        }
+
+        function chooseFile() {
+            var fileInput = document.createElement('input');
+            fileInput.type = 'file';
+            fileInput.accept = 'image/*';
+            fileInput.click();
+
+            fileInput.onchange = (e) => {
+                console.log(e.path[0].files[0]);
+                readImage(e.path[0].files[0]);
+            }
         }
 
         function saveImage() {
@@ -217,24 +232,7 @@
             reader.readAsDataURL(photoFile);
         }
 
-        $('#photo-area').on('dragover', function (e) {
-            e.preventDefault();
-            e.stopPropagation();
-
-            $('#photo-area').addClass('mdui-color-grey-300');
-            $('#photo-area').removeClass('mdui-color-grey-200');
-        });
-
-        $('#photo-area').on('drop', function (e) {
-            e.preventDefault();
-            e.stopPropagation();
-
-            $('#photo-area').removeClass('mdui-color-grey-300');
-            $('#photo-area').addClass('mdui-color-grey-200');
-
-            console.log(e);
-
-            photoFile = e.dataTransfer.files[0];
+        function readImage(photoFile) {
             console.log(photoFile);
             if (photoFile.type.indexOf('image') == -1) {
                 mdui.snackbar({
@@ -273,6 +271,26 @@
             reader.readAsDataURL(photoFile);
 
             document.querySelector('#save-btn').disabled = false;
+        }
+
+        $('#photo-area').on('dragover', function (e) {
+            e.preventDefault();
+            e.stopPropagation();
+
+            $('#photo-area').addClass('mdui-color-grey-300');
+            $('#photo-area').removeClass('mdui-color-grey-200');
+        });
+
+        $('#photo-area').on('drop', function (e) {
+            e.preventDefault();
+            e.stopPropagation();
+
+            $('#photo-area').removeClass('mdui-color-grey-300');
+            $('#photo-area').addClass('mdui-color-grey-200');
+
+            console.log(e);
+
+            readImage(e.dataTransfer.files[0]);
         });
     </script>
 </body>
