--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             style="height: 256px; background-size: contain; background-repeat: no-repeat; background-position: center;" onclick="chooseFile()">
             <div class="mdui-center" style="text-align: center;">
                 <div id="photo-tip">
-                    <h1>document.write(getI18n('drag_your_photo_to_here'))</h1>
+					<h1><script>document.write(getI18n('drag_your_photo_to_here'))</script></h1>
                     <p>Or click here to choose a file</p>
                 </div>
                 <p id="photo-info" class="mdui-hidden">Unknown</p>
