--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
         @font-face {
             font-family: 'MiSans';
             font-weight: normal;
-            src: url(https://tgx-1257769563.cos.ap-shanghai.myqcloud.com/assets/MiSans-Regular.ttf);
+            src: url(./MiSans-Regular.ttf);
         }
 
         @font-face {
             font-family: 'MiSans';
             font-weight: bold;
-            src: url(https://tgx-1257769563.cos.ap-shanghai.myqcloud.com/assets/MiSans-Demibold.ttf);
+            src: url(./MiSans-Demibold.ttf);
         }
 
         body {
