--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="mdui-center" style="text-align: center;">
                 <div id="photo-tip">
 					<h1><script>document.write(getI18n('drag_your_photo_to_here'))</script></h1>
-                    <p><script>document.write(getI18n('or_click_here_to_choose_a_file'))</script>e</p>
+                    <p><script>document.write(getI18n('or_click_here_to_choose_a_file'))</script></p>
                 </div>
                 <p id="photo-info" class="mdui-hidden">Unknown</p>
             </div>
