--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta http-equiv="Cache-Control" content="no-siteapp">
     <title>Photomark</title>
     <link href="https://cdn.staticfile.org/mdui/1.0.2/css/mdui.min.css" rel="stylesheet">
+	<link href="./photomark.css" rel="stylesheet">
     <script src="https://cdn.staticfile.org/mdui/1.0.2/js/mdui.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/exifr/dist/full.umd.js"></script>
     <script>
@@ -43,34 +44,6 @@
 	        return i18nItem;
 	    }
     </script>
-    <style>
-        @font-face {
-            font-family: 'MiSans';
-            font-weight: normal;
-            src: url(./MiSans-Regular.ttf);
-        }
-
-        @font-face {
-            font-family: 'MiSans';
-            font-weight: bold;
-            src: url(./MiSans-Demibold.ttf);
-        }
-
-        body {
-            -webkit-user-select: none;
-            user-select: none;
-
-            font-family: MiSans;
-        }
-
-        .mdui-select {
-            font-family: MiSans;
-        }
-
-        h1 {
-            font-weight: bold;
-        }
-    </style>
 </head>
 
 <body>
