--- a/index.html
+++ b/index.html
@@ -160,7 +160,11 @@
 
             fileInput.onchange = (e) => {
                 console.log(e);
-                readImage(e.path[0].files[0]);
+                if (navigator.userAgent.indexOf('Safari/') > -1) {
+                    readImage(e.target.files[0]);
+                } else {
+                    readImage(e.path[0].files[0]);
+                }
             }
         }
 
