--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             var imageWidth;
             var imageHeight;
             photoCanvas.toBlob(canvasBlob => {
-                if (photoCanvas.width > photoCanvas.length) {
+                if (photoCanvas.width > photoCanvas.height) {
                     imageWidth = '100%';
                     imageHeight = `${document.body.clientWidth * .85 / photoCanvas.width * photoCanvas.height}px`;
                 } else {
@@ -227,7 +227,8 @@
             }
         }
 
-        function drawImage() {
+        function drawImage(preview) {
+            if (typeof preview == 'undefined') preview = false;
             var reader = new FileReader();
             reader.onload = (e) => {
                 var photoImage = new Image();
@@ -270,10 +271,18 @@
                             photoCtx.strokeStyle = '#cccccc';
                             photoCtx.stroke();
 
-                            saveImage();
+                            if (preview) {
+                                previewImage();
+                            } else {
+                                saveImage();
+                            }
                         }
                     } else {
-                        saveImage();
+                        if (preview) {
+                            previewImage();
+                        } else {
+                            saveImage();
+                        }
                     }
                 }
             };
@@ -316,7 +325,7 @@
                         if (res.GPSLatitude && res.GPSLatitudeRef && res.GPSLongitude && res.GPSLongitudeRef) $('#location-input').val(`${res.GPSLatitude[0]}°${res.GPSLatitude[1]}'${parseInt(res.GPSLatitude[2])}"${res.GPSLatitudeRef} ${res.GPSLongitude[0]}°${res.GPSLongitude[1]}'${parseInt(res.GPSLongitude[2])}"${res.GPSLongitudeRef}`);
                     });
 
-                    if (navigator.userAgent.indexOf('Safari/') > -1 && photoFile.size > 1024**3 * 5) {
+                    if (navigator.userAgent.indexOf('Safari/') > -1 && photoFile.size > 1024 ** 3 * 5) {
                         mdui.snackbar({
                             message: 'This image cannot be saved in Safari',
                             position: 'right-top'
