--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                     photoCtx.fillRect(0, 0, photoCanvas.width, photoCanvas.height);
                     photoCtx.drawImage(photoImage, 0, 0);
 
-                    var specLength = $('#lens-input').val().length();
+                    var specLength = $('#lens-input').val().length;
 
                     photoCtx.font = 'bold 120px MiSans';
                     photoCtx.fillStyle = 'black';
