--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="mdui-typo">
                 <a onclick="getLocation()" style="cursor: pointer;">
                     <script>document.write(getI18n('use_current_location'))</script>
-                </a> | <a onclick="matchModel()" style="cursor: pointer;"><script>document.write(getI18n('match_model'))</script>l</a>
+                </a> | <a onclick="matchModel()" style="cursor: pointer;"><script>document.write(getI18n('match_model'))</script></a>
             </div>
         </div>
         <br />
